--- a/source/sample11.html.erb
+++ b/source/sample11.html.erb
@@ -87,7 +87,7 @@ title: Identify QR Code position
       //backgroundScene.add(backgroundCamera);
       backgroundScene.add(movieMesh);
 
-      /*function drawLine(begin, end, color) {
+      function drawLine(begin, end, color) {
         videoCanvasContext.beginPath();
         videoCanvasContext.moveTo(begin.x, begin.y);
         videoCanvasContext.lineTo(end.x, end.y);
@@ -96,10 +96,6 @@ title: Identify QR Code position
         videoCanvasContext.stroke();
       }
 
-      drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
-      drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
-      drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
-      drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");*/
 
       qrCode = {};
 
@@ -110,10 +106,14 @@ title: Identify QR Code position
           videoTexture.needsUpdate = true;
           var imageData = videoCanvasContext.getImageData(0, 0, canvasElement.width, canvasElement.height);
           //console.log(imageData);
-          if (_.isEmpty(qrCode)) {
+          if (true) {
             qrCode = jsQR(imageData.data, imageData.width, imageData.height);
             //console.log(qrCode);
             if (qrCode) {
+              drawLine(qrCode.location.topLeftCorner, qrCode.location.topRightCorner, "#FF3B58");
+              drawLine(qrCode.location.topRightCorner, qrCode.location.bottomRightCorner, "#FF3B58");
+              drawLine(qrCode.location.bottomRightCorner, qrCode.location.bottomLeftCorner, "#FF3B58");
+              drawLine(qrCode.location.bottomLeftCorner, qrCode.location.topLeftCorner, "#FF3B58");
               $('#qrcode-data').text(qrCode.data);
               console.log(qrCode);
             } else {
