--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -53,5 +53,9 @@ title: QR Code with AR
     <td><%= link_to 'jsartoolkit5 with QR Code', '/sample12.html' %></td>
     <td></td>
   </tr>
+    <tr>
+    <td><%= link_to 'Sample 13', '/sample13.html' %></td>
+    <td></td>
+  </tr>
   </tbody>
 </table>
