--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,9 +4,8 @@ title: QR Code with AR
 <table class="table">
   <tbody>
   <tr>
-    <td><%= link_to 'Sample 1', '/sample1.html' %></td>
-    <td>Working
-      with <%= link_to 'https://github.com/schmich/instascan', 'https://github.com/schmich/instascan', target: :_blank %></td>
+    <td>* <%= link_to 'Sample 1', '/sample1.html', class: 'text-success' %></td>
+    <td>With qr code square pattern ;)</td>
   </tr>
   <tr>
     <td><%= link_to 'Sample 2', '/sample2.html' %></td>
