--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,60 +1,78 @@
 ---
-title: QR Code with AR
+title: List of Examples
 ---
-<table class="table">
-  <tbody>
-  <tr>
-    <td>* <%= link_to 'Sample 1', '/sample1.html', class: 'text-success' %></td>
-    <td>With qr code square pattern ;)</td>
-  </tr>
-  <tr>
-    <td><%= link_to 'Sample 2', '/sample2.html' %></td>
-    <td>Working with
-      Three.JS <%= link_to 'https://threejs.org', 'https://threejs.org/docs/index.html#manual/introduction/Creating-a-scene', target: :_blank %></td>
-  </tr>
-  <tr>
-    <td><%= link_to 'Sample 3', '/sample3.html' %></td>
-    <td>AR.js + <%= link_to 'instascan', 'https://github.com/schmich/instascan', target: :_blank%></td>
-  </tr>
-  <tr>
-    <td>* <%= link_to 'Sample 4', '/sample4.html', class: 'text-success' %></td>
-    <td><%= link_to 'jsartoolkit5', 'https://github.com/artoolkit/jsartoolkit5', target: :_blank%></td>
-  </tr>
-  <tr>
-    <td><%= link_to 'Sample 5', '/sample5.html' %></td>
-    <td>Three.js + QR Code + working sample code</td>
-  </tr>
-  <tr>
-    <td><%= link_to 'Sample 6', '/sample6.html' %></td>
-    <td>Three.js + QR Code + Webcam as background</td>
-  </tr>
-  <tr>
-    <td><%= link_to 'Sample 7', '/sample7.html' %></td>
-    <td>three.js + three.ar.js</td>
-  </tr>
-  <tr>
-    <td>* <%= link_to 'Three Js + Background Cam', '/sample8.html', class: 'text-success' %></td>
-    <td>three.js + instascan</td>
-  </tr>
-  <tr>
-    <td><%= link_to 'ar js  + jsQR', '/sample9.html' %></td>
-    <td>AR.js + <%= link_to 'jsQR', 'https://github.com/cozmo/jsQR', target: :_blank%></td>
-  </tr>
-  <tr>
-    <td>* <%= link_to 'jsartoolkit5', '/sample10.html', class: 'text-success' %></td>
-    <td><%= link_to 'jsartoolkit5', 'https://github.com/artoolkit/jsartoolkit5', target: :_blank%> + three.js + instascan</td>
-  </tr>
-  <tr>
-    <td><%= link_to 'Identify QR Code position', '/sample11.html' %></td>
-    <td>three.js and jsQR</td>
-  </tr>
-  <tr>
-    <td><%= link_to 'jsartoolkit5 with QR Code', '/sample12.html' %></td>
-    <td></td>
-  </tr>
-    <tr>
-    <td><%= link_to 'Sample 13', '/sample13.html' %></td>
-    <td></td>
-  </tr>
-  </tbody>
-</table>
+<div class="row">
+  <div class="col-12">
+    <table class="table">
+      <tbody>
+      <tr>
+        <td>* <%= link_to 'Sample 1', '/sample1.html', class: 'text-success' %></td>
+        <td>With qr code square pattern ;)</td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample 2', '/sample2.html' %></td>
+        <td>Working with
+          Three.JS <%= link_to 'https://threejs.org', 'https://threejs.org/docs/index.html#manual/introduction/Creating-a-scene', target: :_blank %></td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample 3', '/sample3.html' %></td>
+        <td>AR.js + <%= link_to 'instascan', 'https://github.com/schmich/instascan', target: :_blank %></td>
+      </tr>
+      <tr>
+        <td>* <%= link_to 'Sample 4', '/sample4.html', class: 'text-success' %></td>
+        <td><%= link_to 'jsartoolkit5', 'https://github.com/artoolkit/jsartoolkit5', target: :_blank %></td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample 5', '/sample5.html' %></td>
+        <td>Three.js + QR Code + working sample code</td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample 6', '/sample6.html' %></td>
+        <td>Three.js + QR Code + Webcam as background</td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample 7', '/sample7.html' %></td>
+        <td>three.js + three.ar.js</td>
+      </tr>
+      <tr>
+        <td>* <%= link_to 'Three Js + Background Cam', '/sample8.html', class: 'text-success' %></td>
+        <td>three.js + instascan</td>
+      </tr>
+      <tr>
+        <td><%= link_to 'ar js  + jsQR', '/sample9.html' %></td>
+        <td>AR.js + <%= link_to 'jsQR', 'https://github.com/cozmo/jsQR', target: :_blank %></td>
+      </tr>
+      <tr>
+        <td>* <%= link_to 'jsartoolkit5', '/sample10.html', class: 'text-success' %></td>
+        <td><%= link_to 'jsartoolkit5', 'https://github.com/artoolkit/jsartoolkit5', target: :_blank %> + three.js +
+          instascan
+        </td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Identify QR Code position', '/sample11.html' %></td>
+        <td>three.js and jsQR</td>
+      </tr>
+      <tr>
+        <td><%= link_to 'jsartoolkit5 with QR Code', '/sample12.html' %></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample 13', '/sample13.html' %></td>
+        <td></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-12 col-lg-4">
+    <table class="table table-light">
+      <tbody>
+      <tr>
+        <td><%= link_to 'Sample 14', '/sample14.html' %></td>
+        <td>Using D marker pattern</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
