--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,7 @@
   <!-- Use the title from a page's frontmatter if it has one -->
   <title><%= current_page.data.title || 'Sample Project for QR Code with AR' %></title>
   <link rel="shortcut icon" href="about:blank">
-  <%= stylesheet_link_tag 'https://bootswatch.com/4/minty/bootstrap.css' %>
+  <%= stylesheet_link_tag 'https://bootswatch.com/4/flatly/bootstrap.min.css' %>
   <%= stylesheet_link_tag 'site' %>
   <%= javascript_include_tag 'https://code.jquery.com/jquery-3.3.1.min.js' %>
   <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.0/underscore-min.js' %>
