Three js sample

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -64,13 +64,22 @@ title: List of Examples
     </table>
   </div>
 </div>
+<hr>
 <div class="row">
-  <div class="col-sm-12 col-lg-4">
+  <div class="col-12">
     <table class="table table-light">
       <tbody>
       <tr>
-        <td><%= link_to 'Sample 14', '/sample14.html' %></td>
-        <td>Using D marker pattern</td>
+        <td><%= link_to 'Sample14', '/sample14.html' %></td>
+        <td>three.js sample</td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample15', '/sample15.html' %></td>
+        <td>AR.js sample</td>
+      </tr>
+      <tr>
+        <td><%= link_to 'Sample16', '/sample16.html' %></td>
+        <td>AR.js using D.patt</td>
       </tr>
       </tbody>
     </table>
