--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -75,11 +75,11 @@ title: List of Examples
       </tr>
       <tr>
         <td><%= link_to 'Sample15', '/sample15.html' %></td>
-        <td>AR.js sample</td>
+        <td>AR.js sample using Square.patt</td>
       </tr>
       <tr>
         <td><%= link_to 'Sample16', '/sample16.html' %></td>
-        <td>AR.js using D.patt</td>
+        <td>AR.js sample using D.patt</td>
       </tr>
       </tbody>
     </table>
