--- a/source/sample16.html.erb
+++ b/source/sample16.html.erb
@@ -58,7 +58,8 @@ layout: false
 </a-scene>
 
 <div class="qr-data-info">
-  QR Data : <span id="qrData"></span>
+  QR Data : <span id="qrData"></span> <br>
+  Calc Scale : <span id="qrData"></span> <br>
 </div>
 
 <script type="text/javascript">
