--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -66,7 +66,7 @@ title: List of Examples
 </div>
 <hr>
 <div class="row">
-  <div class="col-12">
+  <div class="col-6 col-sm-6">
     <table class="table table-light">
       <tbody>
       <tr>
@@ -80,6 +80,16 @@ title: List of Examples
       <tr>
         <td><%= link_to 'Sample16', '/sample16.html' %></td>
         <td>AR.js sample using D.patt</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-6 col-sm-6">
+    <table class="table table-light">
+      <tbody>
+      <tr>
+        <td><%= link_to 'Sample17', '/sample17.html' %></td>
+        <td>AR.js webcam moving event</td>
       </tr>
       </tbody>
     </table>
